# src/bank-withdrawals/dto/reject-bank-withdrawal.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class RejectBankWithdrawalDto {
+  @IsNotEmpty()
+  @IsString()
+  rejectionReason: string;
+}
